<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The %s repository is downloaded</string>
    <string name="download_notification_channel_id" translatable="false">download_finished_channel</string>
    <string name="download_notification_channel_name" translatable="true">Download Complete</string>
    <string name="download_notification_channel_Description" translatable="true">"A download has completed"</string>
    <string name="download_notification_channel_Action" translatable="true">"Check the status"</string>
    <string name="deep_link_url" translatable="false">https:www.notificationapp.com</string>

    <string name="download_cloud_description">Image of a cloud with a download symbol inside it.</string>
    <string name="glide_radio_button_prompt">Glide - Image Loading Library by BumpTech</string>
    <string name="project_radio_button_prompt">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_button_prompt">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="downloading">We are loading</string>
    <string name="start_downloading">Download</string>
    <string name="select_url_hint">Please select the file to download</string>

    <string name="confirm">OK</string>
    <string name="file_name_label">File name:</string>
    <string name="download_status_label">Status:</string>
    <string name="download_success_Description">Success</string>
    <string name="download_failure_Description">Fail</string>
</resources>
