<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DownloadDetailsFragment">

    <data>

        <variable
            name="repository_description"
            type="String" />

        <variable
            name="download_success"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_download_details_xml_constraintlayout_scene">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_large_margin"
            android:layout_marginEnd="@dimen/extra_large_margin"
            android:layout_marginBottom="@dimen/extra_large_margin"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fileNameLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:layout_marginEnd="@dimen/label_separator_margin"
            android:text="@string/file_name_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/downloadInfoText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/downloadInfoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/label_separator_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:text="@{repository_description}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fileNameLabelText"
            app:layout_constraintTop_toTopOf="@+id/fileNameLabelText"
            tools:text="@string/glide_radio_button_prompt" />

        <TextView
            android:id="@+id/downloadStatusLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/download_status_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/downloadStatusInfoText" />

        <TextView
            android:id="@+id/downloadStatusInfoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:downloadSuccessStatus="@{download_success}"
            app:layout_constraintStart_toStartOf="@+id/downloadInfoText"
            app:layout_constraintTop_toBottomOf="@+id/downloadInfoText"
            tools:text="@string/download_success_Description" />
    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>